--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,31 @@
+### Emacs ###
+# -*- mode: gitignore; -*-
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
-composer.phar
-composer.lock
-.DS_Store
-Thumbs.db
-/phpunit.xml
-/.idea
-/.vscode
+/.yarn
+.env
+.env.backup
 .phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+
+# tags
+gtags.files
+GTAGS
+GRTAGS
+GPATH
+GSYMS
